--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -5,31 +5,31 @@
 		<body>
 			<trans-unit id="day.1.abbr" xml:space="preserve">
 				<source>Mo</source>
-				<target>Lu</target>
+				<target>Lun</target>
 			</trans-unit>
 			<trans-unit id="day.2.abbr" xml:space="preserve">
 				<source>Tu</source>
-				<target>Ma</target>
+				<target>Mar</target>
 			</trans-unit>
 			<trans-unit id="day.3.abbr" xml:space="preserve">
 				<source>We</source>
-				<target>Me</target>
+				<target>Mer</target>
 			</trans-unit>
 			<trans-unit id="day.4.abbr" xml:space="preserve">
 				<source>Th</source>
-				<target>Je</target>
+				<target>Jeu</target>
 			</trans-unit>
 			<trans-unit id="day.5.abbr" xml:space="preserve">
 				<source>Fr</source>
-				<target>Ve</target>
+				<target>Ven</target>
 			</trans-unit>
 			<trans-unit id="day.6.abbr" xml:space="preserve">
 				<source>Sa</source>
-				<target>Sa</target>
+				<target>Sam</target>
 			</trans-unit>
 			<trans-unit id="day.7.abbr" xml:space="preserve">
 				<source>Su</source>
-				<target>Di</target>
+				<target>Dim</target>
 			</trans-unit>
 		</body>
 	</file>
