--- a/Resources/Private/Language/ar.locallang.xlf
+++ b/Resources/Private/Language/ar.locallang.xlf
@@ -21,7 +21,7 @@
 			</trans-unit>
 			<trans-unit id="day.5.abbr" xml:space="preserve">
 				<source>Fr</source>
-				<target>金</target>
+				<target>الجُمْعَة</target>
 			</trans-unit>
 			<trans-unit id="day.6.abbr" xml:space="preserve">
 				<source>Sa</source>
