--- a/Resources/Private/Language/es.locallang_be.xlf
+++ b/Resources/Private/Language/es.locallang_be.xlf
@@ -1,20 +1,56 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="es" datatype="plaintext" original="messages" date="2014-12-02T14:53:53Z" product-name="cb_newscal">
-		<header/>
-		<body>
-			<trans-unit id="flexforms_general.displayMonth" xml:space="preserve">
+    <file source-language="es" datatype="plaintext" original="messages" date="2014-12-02T14:53:53Z" product-name="cb_newscal">
+        <header/>
+        <body>
+            <trans-unit id="flexforms_general.displayMonth" xml:space="preserve">
                 <source>Month to display (empty for current month, yyyy-mm for specific month, or +n or -n for relative offset)</source>
                 <target>Mes a mostrar (en blanco para el mes actual, yyyy-mm para especificar el mes, o +n o -n pera un offset relativo)</target>
             </trans-unit>
-			<trans-unit id="flexforms_general.monthsBefore" xml:space="preserve">
+            <trans-unit id="flexforms_general.monthsBefore" xml:space="preserve">
                 <source>Months to display before</source>
                 <target>Meses a mostrar antes</target>
             </trans-unit>
-			<trans-unit id="flexforms_general.monthsAfter" xml:space="preserve">
+            <trans-unit id="flexforms_general.monthsAfter" xml:space="preserve">
                 <source>Months to display after</source>
                 <target>Meses a mostrar después</target>
             </trans-unit>
-		</body>
-	</file>
+            <trans-unit id="flexforms_general.orderBy.eventStartdate" xml:space="preserve">
+                <source>Event dates</source>
+                <target>Fechas del evento</target>
+            </trans-unit>o
+            <trans-unit id="constants.firstDayOfWeek" xml:space="preserve">
+                <source>First day of the week: Day for the first column displayed in the Calendar (default: Sunday)</source>
+                <target>Primer día de la semana: Día para la primera columna mostrada en el calendario (per defecto: Domingo)</target>
+            </trans-unit>
+            <trans-unit id="constants.scrollMode" xml:space="preserve">
+                <source>Scroll mode: Determine the way the navigation works. All but one (-1, default) shows one overlapping month between sets, All (0) shows non-overlapping sets of months, and One (1) scroll one month each time.</source>
+                <target>Modo de desplazamiento: Especifica cómo funciona la navegación. Todos menos uno (-1, por defecto) desplaza todos los meses menos uno, Todos (0) desplaza todos los meses, y Uno (1) desplaza un mes cada vez</target>
+            </trans-unit>
+            <trans-unit id="constants.scrollMode.-1" xml:space="preserve">
+                <source>All but one</source>
+                <target>Todos menos uno</target>
+            </trans-unit>
+            <trans-unit id="constants.scrollMode.0" xml:space="preserve">
+                <source>All</source>
+                <target>Todos</target>
+            </trans-unit>
+            <trans-unit id="constants.scrollMode.1" xml:space="preserve">
+                <source>One</source>
+                <target>Uno</target>
+            </trans-unit>
+            <trans-unit id="constants.view.layoutRootPath" xml:space="preserve">
+                <source>Path to template layouts (FE)</source>
+                <target>Ruta a los diseños de plantillas (FE)</target>
+            </trans-unit>
+            <trans-unit id="constants.view.partialRootPath" xml:space="preserve">
+                <source>Path to template partials (FE)</source>
+                <target>Ruta a los parciales de plantills (FE)</target>
+            </trans-unit>
+            <trans-unit id="constants.view.templateRootPath" xml:space="preserve">
+                <source>Path to templates (FE)</source>
+                <target>Ruta a las plantillas (FE)</target>
+            </trans-unit>
+        </body>
+    </file>
 </xliff>
